--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             text-align: center;
             text-transform: uppercase;
         }
-        tr:hover {
+        tbody tr:hover {
             background-color: #d0f0f0;
         }
         th {
