--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </div>
     <footer>
         <p>Ravi Prudhvi Naga Sai Kumar - 1009460</p>
+        <p>Master of Science in Urban Science, Policy and Planning</p>
     </footer>
     <script>
         async function fetchPSIData() {
