--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tbody></tbody>
         </table>
         <p><strong>PSI Ranges:</strong> 0-50 (Good), 51-100 (Moderate), 101-200 (Unhealthy), 201-300 (Very Unhealthy), 301+ (Hazardous)</p>
-        <p>Retrieved from <a href="https://data.gov.sg" target="_blank">data.gov.sg</a> website.</p>
+        <p>Retrieved from <a href="https://data.gov.sg/datasets/d_8a7850dc3993dc45f1620b9972c58d4d/view" target="_blank">data.gov.sg</a> website.</p>
     </div>
     <footer>
         <p>Ravi Prudhvi Naga Sai Kumar - 1009460</p>
