--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>Singapore PSI Data</h2>
     </header>
     <div class="container">
-        <p>A real-time air quality data visualization for Singapore.</p>
+        <p>Monitor Singapore's air quality in real time with this dynamic PSI (Pollutant Standards Index) Visualization.</p>
         <label for="dateSelect">Select Date: </label>
         <input type="date" id="dateSelect" onchange="fetchPSIData()">
         <p id="lastUpdated"></p>
