--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p><strong>PSI Ranges:</strong> 0-50 (Good), 51-100 (Moderate), 101-200 (Unhealthy), 201-300 (Very Unhealthy), 301+ (Hazardous)</p>
     </div>
     <footer>
-         <p>Retrieved from <a href="https://data.gov.sg/datasets/d_8a7850dc3993dc45f1620b9972c58d4d/view" target="_blank">data.gov.sg</a> website.</p>
+         <p>Data retrieved from <a href="https://data.gov.sg/datasets/d_8a7850dc3993dc45f1620b9972c58d4d/view" target="_blank">data.gov.sg</a></p>
         <p>Ravi Prudhvi Naga Sai Kumar - 1009460</p>
         <p>Master of Science in Urban Science, Policy and Planning</p>
     </footer>
